crates/dag-macros/tests/ui/workflow_if_else_not_ident.stderr
error: if_! requires `else = <node_alias>`
  --> tests/ui/workflow_if_else_not_ident.rs:42:16
   |
42 |         else = "b"
   |                ^^^
